--- a/server/data-model/build.gradle
+++ b/server/data-model/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     compile('org.apache.commons:commons-lang3:3.6')
     compileOnly('org.projectlombok:lombok:1.16.18')
     testCompile('org.springframework.boot:spring-boot-starter-test:1.5.6.RELEASE')
+    compile('com.fasterxml.jackson.core:jackson-annotations:2.8.6')
+    compile('com.fasterxml.jackson.core:jackson-core:2.8.6')
 }
